Fixes spacing, etc for admin, etc.

--- a/static/abstracts/_variables.scss
+++ b/static/abstracts/_variables.scss
@@ -33,18 +33,21 @@ $font-weight-med: 700; // Equivalent to bold
 $font-weight-heavy: 900;
 
 // RESPONSIVE BREAKPOINTS
-$bp-largest: 75em;      //  1200px
-$bp-large: 62.5em;      //  1000px
-$bp-med: 53.125em;      //  850px
-$bp-ipad: 48em;         //  768px
-$bp-moto-g4: 48em;      //  640px - Moto g4 landscape
-$bp-sm: 37.5em;         //  600px
-$bp-extra-sm: 30em;     //  480px
-$bp-mobile-l: 26.6em;   // 425px
-$bp-pixel-2: 25.6875em; // 411px - Pixel 2
-$bp-mobile-m: 23.5em;   // 376px
-$bp-mobile-s: 20em;     // 320px
-$bp-tiny: 18.75em;      //  300px
+$bp-ipad-pro: 85.375em;  //  1366px
+$bp-largest: 75em;       //  1200px
+$bp-ipad-land: 64em;     //  1024px - iPad landscape
+$bp-large: 62.5em;       //  1000px
+$bp-med: 53.125em;       //  850px
+$bp-ipad: 48em;          //  768px
+$bp-moto-g4: 48em;       //  640px - Moto g4 landscape
+$bp-sm: 37.5em;          //  600px
+$bp-extra-sm: 30em;      //  480px
+$bp-mobile-l: 26.6em;    //  425px
+$bp-pixel-2: 25.6875em;  //  411px - Pixel 2
+$bp-mobile-m: 23.5em;    //  376px
+$bp-mobile-s: 20em;      //  320px
+$bp-tiny: 18.75em;       //  300px
+$bp-galaxy-fold: 17.5em; //  Galaxy Fold
 
 // BOX SHADOW
 $box-shadow-2: 0 1rem 1.2rem  rgba($logo-red, .4);
