--- a/static/components/_sidebar.scss
+++ b/static/components/_sidebar.scss
@@ -190,6 +190,10 @@
       @media only screen and (max-width: $bp-mobile-s) {
         margin-top: 2.4rem;
       }
+
+      @media only screen and (max-width: $bp-galaxy-fold) {
+        margin-top: 1.8rem;
+      }
     }
   }
 
